# Cognitive-Canvas-EEG

./: LICENSE  Makefile  README.md  pyproject.toml
cognitive_canvas_eeg/: __init__.py  dataset.py  features.py  plots.py
cognitive_canvas_eeg/modeling/: predict.py  train.py
docs/: mkdocs.yml
docs/docs/: index.md
emotiv-lsl-main/emotiv-lsl-main/: Pipfile  data_collection.py  visualize.py
emotiv-lsl-main/emotiv-lsl-main/examples/: read_and_export_mne.py
